// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes GET /posts/:id should return post by id 1`] = `
Object {
  "id": "p1",
}
`;

exports[`compatibility routes GET /posts/:id should return post by short id 1`] = `
Object {
  "id": "p1",
}
`;

exports[`compatibility routes GET /posts/:id should return private post by id 1`] = `
Object {
  "id": "p6",
}
`;

exports[`compatibility routes POST /posts/:id/hide should hide the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`compatibility routes POST /posts/:id/report should report the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`image fields should return default image when no image exists 1`] = `
Object {
  "post": Object {
    "image": "https://res.cloudinary.com/daily-now/image/upload/f_auto/v1/placeholders/5",
    "placeholder": "data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAAKAAoDASIAAhEBAxEB/8QAFwAAAwEAAAAAAAAAAAAAAAAABAUGB//EACYQAAIABAQGAwAAAAAAAAAAAAECAAMEBRESE0IGByExQVFScZH/xAAVAQEBAAAAAAAAAAAAAAAAAAABA//EABURAQEAAAAAAAAAAAAAAAAAAAAR/9oADAMBAAIRAxEAPwCgPMKtsdvWjpamiGsuCBVZzn3NmOAB+wYUni23kkz71OM09XObd5jBKufNagklprk4jux9QBqP82/YpQ//2Q==",
    "ratio": 1,
  },
}
`;

exports[`image fields should return post image when exists 1`] = `
Object {
  "post": Object {
    "image": "http://image.com",
    "placeholder": "data:image/jpeg;base64,placeholder",
    "ratio": 0.5,
  },
}
`;

exports[`mutation hidePost should hide the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation hidePost should ignore conflicts 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation reportPost should ignore conflicts 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation reportPost should report post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation upvote should ignore conflicts 1`] = `
Array [
  Upvote {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation upvote should upvote post 1`] = `
Array [
  Upvote {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`query post should return post by id 1`] = `
Object {
  "post": Object {
    "id": "p1",
    "readTime": null,
    "source": Object {
      "id": "a",
      "image": "http://image.com/a",
      "name": "A",
      "public": true,
    },
    "tags": Array [
      "javascript",
      "webdev",
    ],
    "title": "P1",
    "url": "http://p1.com",
  },
}
`;

exports[`source field should return the private representation 1`] = `
Object {
  "post": Object {
    "source": Object {
      "id": "a",
      "image": "https://private.com/a",
      "name": "Private A",
      "public": false,
    },
  },
}
`;

exports[`source field should return the public representation 1`] = `
Object {
  "post": Object {
    "source": Object {
      "id": "a",
      "image": "http://image.com/a",
      "name": "A",
      "public": true,
    },
  },
}
`;
